--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.19.0",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
+    "mongodb": "^3.5.7",
     "nodemon": "^2.0.3",
     "pg": "^7.18.2"
   },
